--- a/index.html
+++ b/index.html
@@ -8,12 +8,32 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             fontFamily: {
-              sans: ['Inter', 'sans-serif'],
-              serif: ['Instrument Serif', 'serif'],
+              sora: ['Sora', 'sans-serif'],
+              playfair: ['Playfair Display', 'serif'],
             },
+            colors: {
+              stone: {
+                50: '#fafaf9',
+                100: '#f5f5f4',
+                200: '#e7e5e4',
+                300: '#d6d3d1',
+                400: '#a8a29e',
+                500: '#78716c',
+                600: '#57534e',
+                700: '#44403c',
+                800: '#292524',
+                900: '#1c1917',
+                950: '#0c0a09',
+              },
+              fuchsia: {
+                500: '#d946ef',
+                600: '#c026d3',
+              }
+            }
           }
         }
       }
@@ -31,13 +51,14 @@
           "tailwind-merge": "https://esm.sh/tailwind-merge@^2.4.0",
           "@tsparticles/react": "https://esm.sh/@tsparticles/react@^3.0.0",
           "@tsparticles/engine": "https://esm.sh/@tsparticles/engine@^3.5.0",
-          "@tsparticles/slim": "https://esm.sh/@tsparticles/slim@^3.5.0"
+          "@tsparticles/slim": "https://esm.sh/@tsparticles/slim@^3.5.0",
+          "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.45.0"
         }
       }
     </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:wght@400;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Sora:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://esm.sh/react-image-crop@^11.0.6/dist/ReactCrop.css" />
     <link rel="stylesheet" href="/index.css" />
   </head>
