feat: Integrate DodoPayments for credit purchases
Adds the `dodopayments-checkout` library to handle payment processing for purchasing credits.
Introduces a new `PurchaseCreditsModal` component and associated logic within `App.tsx` to manage the credit purchasing flow.
Updates `package.json` and `index.html` to include the new dependency and its CDN link.
Minor fixes in icon component viewBox attributes.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
           "@tsparticles/react": "https://esm.sh/@tsparticles/react@^3.0.0",
           "@tsparticles/engine": "https://esm.sh/@tsparticles/engine@^3.5.0",
           "@tsparticles/slim": "https://esm.sh/@tsparticles/slim@^3.5.0",
-          "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.45.0"
+          "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.45.0",
+          "dodopayments-checkout": "https://esm.sh/dodopayments-checkout@latest"
         }
       }
     </script>
