--- a/index.html
+++ b/index.html
@@ -37,32 +37,34 @@
         }
       }
     </script>
-    <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.1.0/",
-    "react": "https://esm.sh/react@^19.1.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.10.0",
-    "react-image-crop": "https://esm.sh/react-image-crop@^11.0.6",
-    "framer-motion": "https://esm.sh/framer-motion@^11.2.12",
-    "clsx": "https://esm.sh/clsx@^2.1.1",
-    "tailwind-merge": "https://esm.sh/tailwind-merge@^2.4.0",
-    "@tsparticles/react": "https://esm.sh/@tsparticles/react@^3.0.0",
-    "@tsparticles/engine": "https://esm.sh/@tsparticles/engine@^3.5.0",
-    "@tsparticles/slim": "https://esm.sh/@tsparticles/slim@^3.5.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.45.0",
-    "standardwebhooks": "https://aistudiocdn.com/standardwebhooks@^1.0.0",
-    "dodopayments": "https://aistudiocdn.com/dodopayments@^2.4.2"
-  }
-}
-</script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Sora:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://esm.sh/react-image-crop@^11.0.6/dist/ReactCrop.css" />
     <link rel="stylesheet" href="/index.css" />
-  </head>
+  <script type="importmap">
+{
+  "imports": {
+    "dodopayments": "https://aistudiocdn.com/dodopayments@^2.4.2",
+    "standardwebhooks": "https://aistudiocdn.com/standardwebhooks@^1.0.0",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.78.0",
+    "clsx": "https://aistudiocdn.com/clsx@^2.1.1",
+    "tailwind-merge": "https://aistudiocdn.com/tailwind-merge@^3.3.1",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
+    "vite": "https://aistudiocdn.com/vite@^7.1.12",
+    "react-image-crop": "https://aistudiocdn.com/react-image-crop@^11.0.10",
+    "@tsparticles/slim": "https://aistudiocdn.com/@tsparticles/slim@^3.9.1",
+    "@tsparticles/engine": "https://aistudiocdn.com/@tsparticles/engine@^3.9.1",
+    "@tsparticles/react": "https://aistudiocdn.com/@tsparticles/react@^3.0.0"
+  }
+}
+</script>
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
