feat: Add user profile and saved looks features
Introduces user authentication, profile management, and the ability to save and view outfits. This change includes:

- New components for user authentication (`Auth`, `ProfileMenu`), toast notifications (`Toast`), and saved looks display (`SavedLooksPanel`).
- Updates to `App.tsx` to integrate these new components and manage user session and data.
- Addition of `uuid` package for generating unique identifiers.
- Updates to `index.html` to include the new dependency.
- Addition of icons for user-related actions (`UserIcon`, `BookmarkIcon`, `CheckIcon`).
- Refactoring in `StartScreen.tsx` to handle loading states for models and potential new user flows.
- Updates to `WardrobePanel.tsx` to include a delete icon.
- Modifications in `geminiService.ts` to prepare for user authentication and data persistence.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     "react-image-crop": "https://aistudiocdn.com/react-image-crop@^11.0.10",
     "@tsparticles/slim": "https://aistudiocdn.com/@tsparticles/slim@^3.9.1",
     "@tsparticles/engine": "https://aistudiocdn.com/@tsparticles/engine@^3.9.1",
-    "@tsparticles/react": "https://aistudiocdn.com/@tsparticles/react@^3.0.0"
+    "@tsparticles/react": "https://aistudiocdn.com/@tsparticles/react@^3.0.0",
+    "uuid": "https://aistudiocdn.com/uuid@^13.0.0"
   }
 }
 </script>
