fix: Improve error handling and update dependencies
Updates the `getFriendlyErrorMessage` utility to safely handle unknown error types from catch blocks. Also, updates React and React DOM dependencies to version 18.2.0 and imports necessary Tailwind CSS configurations and fonts.

--- a/lib/index.html
+++ b/lib/index.html
@@ -47,10 +47,11 @@
   "imports": {
     "dodopayments": "https://aistudiocdn.com/dodopayments@^2.4.2",
     "standardwebhooks": "https://aistudiocdn.com/standardwebhooks@^1.0.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react": "https://aistudiocdn.com/react@18.2.0",
+    "react-dom": "https://aistudiocdn.com/react-dom@18.2.0",
+    "react/": "https://aistudiocdn.com/react@18.2.0/",
+    "react-dom/": "https://aistudiocdn.com/react-dom@18.2.0/",
     "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
     "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.78.0",
     "clsx": "https://aistudiocdn.com/clsx@^2.1.1",
