--- a/index.html
+++ b/index.html
@@ -40,15 +40,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Sora:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://esm.sh/react-image-crop@11.0.10/dist/ReactCrop.css" />
+    <link rel="stylesheet" href="https://esm.sh/react-image-crop@^11.0.6/dist/ReactCrop.css" />
     <link rel="stylesheet" href="/index.css" />
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@18.2.0",
-    "react-dom": "https://esm.sh/react-dom@18.2.0",
-    "react-dom/": "https://esm.sh/react-dom@18.2.0/",
-    "react/": "https://esm.sh/react@18.2.0/",
+    "react": "https://aistudiocdn.com/react@^18.2.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^18.2.0/",
+    "react/": "https://aistudiocdn.com/react@^18.2.0/",
     "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
     "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.78.0",
     "@tsparticles/react": "https://aistudiocdn.com/@tsparticles/react@^3.0.0",
@@ -56,7 +55,7 @@
     "@tsparticles/slim": "https://aistudiocdn.com/@tsparticles/slim@^3.9.1",
     "clsx": "https://aistudiocdn.com/clsx@^2.1.1",
     "tailwind-merge": "https://aistudiocdn.com/tailwind-merge@^3.3.1",
-    "react-image-crop": "https://esm.sh/react-image-crop@11.0.10",
+    "react-image-crop": "https://aistudiocdn.com/react-image-crop@^11.0.10",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
     "dodopayments": "https://aistudiocdn.com/dodopayments@^2.4.2",
     "standardwebhooks": "https://aistudiocdn.com/standardwebhooks@^1.0.0",
